SSC-1138 fix spacing for accordion and teaser. css syntax

--- a/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/general.less
+++ b/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/general.less
@@ -7,7 +7,7 @@
     max-width: 960px;
 }
 
-.parbase:not(.teaser, .accordion) {
+.parbase:not(.teaser):not(.accordion) {
     margin-bottom: 20px;
 }
 
